--- a/Famine/Config/DefaultInput.ini
+++ b/Famine/Config/DefaultInput.ini
@@ -78,11 +78,16 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="BuildMenuToggle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
++ActionMappings=(ActionName="FlyingSpeedToggle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="OverseerRotateLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="OverseerRotateRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +AxisMappings=(AxisName="OverseerForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="OverseerRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="OverseerForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="OverseerRight",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="OverseerZoom",Scale=-1.000000,Key=MouseWheelAxis)
++AxisMappings=(AxisName="OverseerVertical",Scale=-1.000000,Key=SpaceBar)
++AxisMappings=(AxisName="OverseerVertical",Scale=1.000000,Key=LeftControl)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
