--- a/Famine/Config/DefaultInput.ini
+++ b/Famine/Config/DefaultInput.ini
@@ -82,6 +82,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="FlyingSpeedToggle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="OverseerRotateLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="OverseerRotateRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="Left Mouse Button",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="OverseerForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="OverseerRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="OverseerForward",Scale=-1.000000,Key=S)
