Added Savefile Object
Save/Load game TBD

--- a/Famine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Famine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -323,26 +323,28 @@ Translate Cursor Screen Coords To World Coords=BlockingVolume.Collision.Collisio
 Translate Cursor Screen Coords To World Coords_9=BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision
 Ray-Plane Intersection Formula=BlockingVolume.Collision.Collision,BuildingSuperclass_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision
 K2Node_Variable=BlockingVolume.Collision.Collision,BuildingSuperclass_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision
-WorldPartitionRuntimeHashSet=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeHashSet=
 Colonist_C=
 Housing_C=
 Get World Location Of  Mouse Cursor=
 ErrandDataClass_C=
+FamineSavefile_C=
 
 [EditorStartup]
-LastLevel=/Game/Levels/LVBase
+LastLevel=/Engine/Maps/Templates/OpenWorld
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1351,20 +1353,22 @@ MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
 MaterialExpressionDivide.MaterialExpressionDivide=True
 MaterialExpressionDivide.MaterialExpression=True
+ErrandDataClass_C.Default=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BlueprintClasses/Errands/ErrandDataClass
-MRUItem1=/Game/Assets/Materials/Grass/MGrass
-MRUItem2=/Game/BlueprintClasses/Player/BPOverseerController
-MRUItem3=/Game/Assets/Materials/MColonistPlaceholderMaterial
-MRUItem4=/Game/Levels/LVBase
-MRUItem5=/Game/BlueprintClasses/Colonists/Colonist
-MRUItem6=/Game/BlueprintClasses/Buildings/Housing
-MRUItem7=/Game/BlueprintClasses/Buildings/BuildingSuperclass
-MRUItem8=/Game/BlueprintClasses/Player/OverseerHUD
-MRUItem9=/Game/BlueprintClasses/Player/BPOverseerCharacter
-MRUItem10=/Game/BlueprintClasses/Gamemodes/BPGameplay
-MRUItem11=/Game/Assets/Materials/MRed
+MRUItem0=/Game/BlueprintClasses/SaveFile/FamineSavefile
+MRUItem1=/Game/BlueprintClasses/Errands/ErrandDataClass
+MRUItem2=/Game/BlueprintClasses/Colonists/Colonist
+MRUItem3=/Game/BlueprintClasses/Buildings/Housing
+MRUItem4=/Game/BlueprintClasses/Buildings/BuildingSuperclass
+MRUItem5=/Game/Assets/Materials/Grass/MGrass
+MRUItem6=/Game/BlueprintClasses/Player/BPOverseerController
+MRUItem7=/Game/Assets/Materials/MColonistPlaceholderMaterial
+MRUItem8=/Game/Levels/LVBase
+MRUItem9=/Game/BlueprintClasses/Player/OverseerHUD
+MRUItem10=/Game/BlueprintClasses/Player/BPOverseerCharacter
+MRUItem11=/Game/BlueprintClasses/Gamemodes/BPGameplay
+MRUItem12=/Game/Assets/Materials/MRed
 
 [PlacementMode]
 RecentlyPlaced=/Game/BlueprintClasses/Buildings/Housing.Housing;
@@ -1412,7 +1416,7 @@ GridTile_C.LevelInstance=True
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.ActionMappings.ActionMappings[4]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
-Object=
+Object="\"Object\" "
 TextRenderComponent="\"Object.Text.TextRenderColor\" "
 PrimitiveComponent="\"Object\" \"Object.Lighting.LightmassSettings\" "
 SceneComponent="\"Object\" \"Object.Lighting.LightmassSettings\" "
@@ -1451,9 +1455,11 @@ MaterialExpressionTextureBase="\"Object\" "
 MaterialExpressionReroute="\"Object\" "
 MaterialExpressionRerouteBase="\"Object\" "
 MaterialExpressionDivide="\"Object\" "
-ErrandDataClass_C="\"Object\" \"Object.Errand Types\" "
+ErrandDataClass_C="\"Object\" "
 Colonist_C=
 Pawn=
+FamineSavefile_C="\"Object\" "
+SaveGame="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Materials/MRed.MRed=0
@@ -1471,6 +1477,7 @@ Pawn=
 /Game/Assets/Materials/MColonistPlaceholderMaterial.MColonistPlaceholderMaterial=0
 /Game/Assets/Materials/Grass/MGrass.MGrass=0
 /Game/BlueprintClasses/Errands/ErrandDataClass.ErrandDataClass=0
+/Game/BlueprintClasses/SaveFile/FamineSavefile.FamineSavefile=1
 
 [MaterialEditor]
 PrimType=1
@@ -1657,8 +1664,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -3000,4 +3007,20 @@ Materials_LastSelectedPipeline=InterchangeGenericMaterialPipeline
 
 [Interchange_StackName__Materials__PipelineClassName_InterchangeMaterialXPipeline]
 Results=None
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoSaveMaxBackups=10
+AutoSaveMethod=BackupAndRestore
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+RestoreOpenAssetTabsOnRestart=AlwaysRestore
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
