--- a/Famine/Config/DefaultEngine.ini
+++ b/Famine/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Levels/LVBase.LVBase
+EditorStartupMap=/Game/Levels/LVBase.LVBase
+GameInstanceClass=/Game/BlueprintClasses/GameInstance/FamineGameInstance.FamineGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
